2006-02-17  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_get_type),
	(gst_ring_buffer_open_device), (gst_ring_buffer_close_device),
	(gst_ring_buffer_device_is_open), (gst_ring_buffer_acquire),
	(gst_ring_buffer_release), (gst_ring_buffer_set_flushing),
	(gst_ring_buffer_start), (gst_ring_buffer_pause_unlocked),
	(gst_ring_buffer_pause), (gst_ring_buffer_stop),
	(gst_ring_buffer_delay), (gst_ring_buffer_samples_done),
	(gst_ring_buffer_set_sample), (gst_ring_buffer_clear_all),
	(gst_ring_buffer_commit), (gst_ring_buffer_prepare_read),
	(gst_ring_buffer_clear):
	Small cleanups.
	Added some G_LIKELY.

2006-02-17  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/TODO:
	Update TODO

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_get_offset):
	When trying to play samples ASAP and we don't have a
	previous sample, try to play at position 0 instead of
	an invalid position.

2006-02-17  Wim Taymans  <wim@fluendo.com>

	* ext/alsa/gstalsasink.c: (gst_alsasink_open),
	(gst_alsasink_reset):
	Also release lock when we get an error in _reset();
	fix an error message.

2006-02-16  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/alsa/gstalsasink.c: (gst_alsasink_class_init),
	(gst_alsasink_init), (get_channel_free_structure),
	(caps_add_channel_configuration), (gst_alsasink_getcaps),
	(gst_alsasink_close):
	* ext/alsa/gstalsasink.h:
	  Add support for more than 2 channels (#326720).

2006-02-16  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_audio_caps):
	  Set codec_name for WAVEFORMATEX as well. When we have 'normal PCM'
	  with 4 or 6 channels, assume a default channel layout to make things
	  work (not sure there's anything else we can do in those cases).

2006-02-16  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/multichannel.c:
	  Minor docs fix.

	* gst-libs/gst/riff/Makefile.am:
	* gst-libs/gst/riff/riff-ids.h: